[tool.poetry]
name = "home-work-unittest"
version = "0.1.0"
description = ""
authors = ["Shebelnitskiy <Shebelnitskiywork@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_unittest"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
